# skellington

./: .gitignore  CMakeLists.txt  README.md
data/: ArmatureFlatSimple.blend  ArmatureFlatSimple.dae  ArmatureForked.blend  ArmatureForked.dae  ArmatureForkedComplex.blend  ArmatureForkedComplex.dae  ArmatureStraight.blend  ArmatureStraight.dae
skellington/: AssimpLoader.cpp  AssimpLoader.h  Joint.cpp  Joint.h  Mesh.cpp  Mesh.h  MeshSkeletonAnimator.cpp  MeshSkeletonAnimator.h  OptimizedCoRComputer.cpp  OptimizedCoRComputer.h  Pose.cpp  Pose.h  Skeleton.cpp  Skeleton.h  Transform.cpp  Transform.h
test/: OpenGLTestUtils.h  SkellingtonTestUtils.h  simpletext.h  testAnimateLinear.cpp  testFlatSimple.cpp  testLoad.cpp  testOptimizedCentersOfRotation.cpp
